# wfsimn

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  index.rst  wfsimn.rst
notebooks/: TestWfSimn.ipynb  simple_sample.ipynb  usage.ipynb  usage_examples.ipynb
run_script/: run.py
tests/: test_wfsimn.py
wfsimn/: __init__.py  analyzer.py  cli.py  core.py  generator.py  preprocessor.py  strax_interface.py  visualizer.py
wfsimn/data/: ave_TEST000012_02242020121353_ch0.npy  average_pulse.npy  average_pulse_v2.npy  mc71_dangerous.root  wave_one_pe_short.csv
