[metadata]
name = wfsimn
version = attr: wfsimn.__version__
url = https://github.com/XENONnT/wfsimn
description = Waveform simulator of neutron Veto in XENONnT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    seaborn
    uproot
    tqdm
    strax
python_requires = >=3.4
